@@ -1,9 +1,6 @@
 Known bugs of pkTriggerCord:
 
-  Program assumes jpeg sharpness/contrast/saturation/hue values to be
-  between 0 and 6 (displayed as -3 +3 ). Pentax K-x has values 
-  between 0 and 8 (displayed as -4 +4 ). Probably the range is
-  camera-specific. 
+  Setting jpeg sharpness/contrast/saturation has no effect sometimes.
 
   Downloading jpeg with non-maximal resolution does not work.
 
